<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7EBEC"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:padding="3dp"
            android:text="@string/have_account"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:padding="6dp"
            android:text="@string/sign_up"
            android:textColor="@color/logoBlue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DAE0E2"
        android:layout_margin="16dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="12dp"
        card_view:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/sign_in_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/sign_in_to_continue"
                android:textColor="#757575"
                android:textSize="16sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_in_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/logoBlue_light" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_in_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@drawable/password_visibility"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/logoBlue_light">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:ems="10"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/logoBlue_light" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/sign_in_forgot_pass_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#212121"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_button"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="17sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="150dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="525dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>