<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAE0E2"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/sign_up_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="12dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/sign_in_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sign_up_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_logo" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:text="Register as new user"
                    android:textColor="#757575"
                    android:textSize="16sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/full_name"
                        android:inputType="textCapWords"
                        android:textColorHint="@color/lightRed" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/lightRed" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="Phone"
                        android:inputType="phone"
                        android:textColorHint="@color/lightRed" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/sign_up_dob_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/dob_date_picker"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingTop="7dp"
                        android:paddingLeft="7dp"
                        android:paddingBottom="7dp"
                        android:layout_weight="70"
                        android:text="Date of birth"
                        android:textColor="#757575"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/dob_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="30"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"
                        android:text="@string/dob_format"
                        android:textColor="@color/material_light_hint_text"
                        android:textSize="17sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sign_up_bloodgroup_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="100"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:id="@+id/dob_bloodgroup_display"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingTop="7dp"
                        android:paddingStart="7dp"
                        android:paddingBottom="7dp"
                        android:layout_weight="70"
                        android:text="@string/blood_group"
                        android:textColor="#757575"
                        android:textSize="17sp"
                        tools:ignore="RtlSymmetry" />

                    <Spinner
                        android:id="@+id/blood_group_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_weight="30"
                        android:entries="@array/blood_groups"
                        android:prompt="@string/blood_group"/>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_up_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleDrawable="@drawable/password_visibility"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/logoBlue_light">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:ems="10"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColorHint="@color/lightRed" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/sign_up_button"
                    android:layout_width="140dp"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_default"
                    android:padding="10dp"
                    android:text="@string/sign_up_now"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/already_have_an_account"
            android:textColor="#000000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingStart="8dp"
            android:text="@string/sign_in"
            android:textColor="@color/logoBlue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            />

    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>